--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <ul class="content-list">
                 <li class="content-list__item">
                     <h2 class="title-2">Frontend</h2>
-                    <p>HTML, CSS, JavaScript</p>
+                    <p>HTML, CSS, SCSS, Tailwind CSS, Bootstrap, JavaScript, TypeScript, React</p>
                 </li>
 
                 <li class="content-list__item">
